--- a/riff-laspapeleras/package.json
+++ b/riff-laspapeleras/package.json
@@ -6,7 +6,8 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "styled-components": "^1.4.4"
   },
   "devDependencies": {
     "react-scripts": "0.9.3"
