--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 # Created by .ignore support plugin (hsz.mobi)
 node_modules/
-.idea/workspace.xml
+./riff-laspapeleras/.idea/workspace.xml
 npm-debug.log
