--- a/riff-laspapeleras/package.json
+++ b/riff-laspapeleras/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-modal": "^1.7.1",
     "react-redux": "^5.0.3",
     "redux": "^3.6.0",
     "styled-components": "^1.4.4"
