--- a/riff-laspapeleras/package.json
+++ b/riff-laspapeleras/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "google-maps-react": "^1.0.19",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-modal": "^1.7.1",
